# Timetable_Schedule_PDP

./: .gitignore  CMakeLists.txt  ReadMe.md  SolverMPI.cpp  SolverOpenCL.cpp  SolverThreads.cpp  Timetable.h  kernel.cl  main.cpp  sample_input.txt
